added header section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assaignment-2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <title>Assaignment-2</title>
 </head>
+
 <body>
-    <header></header>
+    <header>
+
+        <nav>
+            <div class="logo">
+                <h1><span>Fitness</span></h1>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#"></a>Home</li>
+                    <li><a href="#"></a>service</li>
+                    <li><a href="#"></a>contact</li>
+                    <li><a href="#"></a>about </li>
+                </ul>
+            </div>
+
+        </nav>
+
+        <div class="hero">
+            <div class="container">
+
+                <div class="left">
+                    <h1>Get body in <br> <span>shape</span> & stay <br> healthy</h1>
+                    <p>A huge selection of health and fitness content, healthy recipes and transformation stories to
+                        help you get fit and stay fit!</p>
+                    <div class="btn">
+                        <button class="btn-1">Join Club Now!</button>
+                        <button class="btn-1 btn-2"> Download App</button>
+                    </div>
+                </div>
+
+                <div class="right">
+                    <div class="div-1">
+                        <h4>500+ <br> <span>Free Workout Videos</span> </h4>
+                    </div>
+                    <div class="div-2">
+                        <div></div>
+                        <h4>350+ <br> <span>Video tutorial</span></h4>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+
+    </header>
     <main></main>
     <footer></footer>
 </body>
+
 </html>
