--- a/index.html
+++ b/index.html
@@ -63,7 +63,24 @@
 
 
     </header>
-    <main></main>
+
+    <main>
+        <section class="habit">
+            <div class="tittle">
+                <h1>Change Your Habits</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="cards">
+                <div class="div-1">
+                    <div class="img"></div>
+                    <div class="des">
+                        <h1>Movement </h1>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
