added habit section

--- a/index.html
+++ b/index.html
@@ -72,10 +72,39 @@
             </div>
             <div class="cards">
                 <div class="div-1">
-                    <div class="img"></div>
+                    <div class="img">
+                        <img src="images/image3.png" alt="">
+                    </div>
                     <div class="des">
                         <h1>Movement </h1>
-                        <p>We believe fitness should be accessible to everyone</p>
+                        <p>movement is very important for gain something it's helps to earn</p>
+                    </div>
+                </div>
+                <div class="div-2">
+                    <div class="img">
+                        <img src="images/image2.png" alt="">
+                    </div>
+                    <div class="des">
+                        <h1>Time </h1>
+                        <p>everyday some time to taken for exercise that's help our body & mind</p>
+                    </div>
+                </div>
+                <div class="div-3">
+                    <div class="img">
+                        <img src="images/image4.png" alt="">
+                    </div>
+                    <div class="des">
+                        <h1>Practice  </h1>
+                        <p>noother alternative for practice. it's make a men perfect his profession or skills </p>
+                    </div>
+                </div>
+                <div class="div-4">
+                    <div class="img">
+                        <img src="images/image5.png" alt="">
+                    </div>
+                    <div class="des">
+                        <h1>Weight Loss</h1>
+                        <p>if we taken exercise & proper diet than we achived our goals for loss weight</p>
                     </div>
                 </div>
             </div>
