responsive runing section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
                 </div>
             </div>
         </section>
+
+        <section class="runing">
+            <div class="tittle">
+                <h1> Run an Extra <br> Mile Easily</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="btn-1">Join Now</button>
+            </div>
+            <div class="img">
+                <img src="images/run.jpg" alt="">
+            </div>
+        </section>
+
     </main>
     <footer></footer>
 </body>
