added training section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,48 @@
             </div>
         </section>
 
+        <section class="training">
+            <div class="tittle">
+                <h1>Trainings and Exercises</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="cards">
+                <div>
+                    <div class="overlay"></div>
+                    <img src="images/exercise1.jpg" alt="">
+                    <h1>Handfree exercise</h1>
+                </div>
+                <div>
+                    <div class="overlay"></div>
+                    <img src="images/exercise2.png" alt="">
+                    <h1>Pushup exercise</h1>
+                </div>
+                <div>
+                    <div class="overlay"></div>
+                    <img src="images/exercise3.png" alt="">
+                    <h1>
+                    Leg Press: Works the quadriceps and glutes
+                    </h1>
+                </div>
+                <div>
+                    <div class="overlay"></div>
+                    <img src="images/exercise4.png" alt="">
+                    <h1>Handfree exercise</h1>
+                </div>
+                <div>
+                    <div class="overlay"></div>
+                    <img src="images/exercise5.jpg" alt="">
+                    <h1>exercise with leg and hand</h1>
+                </div>
+                <div>
+                    <div class="overlay"></div>
+                    <img src="images/exercise6.jpg" alt="">
+                    <h1>Pullup exercise</h1>
+                </div>
+              
+            </div>
+        </section>
+
     </main>
     <footer></footer>
 </body>
