--- a/index.html
+++ b/index.html
@@ -254,8 +254,67 @@
 
         </section>
 
+        <section class="team">
+            <div class="tittle">
+                <h1>Meet Our Team</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="cards">
+                <div class="div-1">
+                    <img src="images/trainer1.png">
+                    <h4>Jerome Bell <br> <span>Trainer</span></h4>
+                </div>
+                <div class="div-2">
+                    <img src="images/trainer2.png">
+                    <h4>Cameron Willi      <br> <span>Trainer</span></h4>
+                </div>
+                <div class="div-3">
+                    <img src="images/trainer3.png">
+                    <h4>Darrell Steward  <br> <span>Trainer</span></h4>
+                </div>
+                <div class="div-4">
+                    <img src="images/trainer4.png">
+                    <h4>Dianne Russell <br> <span>Trainer</span></h4>
+                </div>
+                <div class="div-5">
+                    <img src="images/trainer5.png">
+                    <h4>Cody Fisher <br> <span>Trainer</span></h4>
+                </div>
+                <div class="div-6">
+                    <img src="images/trainer6.png">
+                    <h4>Thersa webb <br> <span>Trainer</span></h4>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="div-1">
+                <h1><span>Fitness</span></h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            </div>
+            <div>
+                <h1>Get Started</h1>
+                <ul>
+                    <li>Fitness</li>
+                    <li>Platform</li>
+                    <li>Workout Libary</li>
+                    <li>App Design</li>
+                </ul>
+            </div>
+            <div>
+                <h1>Get Started</h1>
+                <ul>
+                    <li>Service</li>
+                    <li>Contact Us</li>
+                    <li>Affiliate Program</li>
+                    <li>Affiliate Program</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <p id="copyright">All right reserved @Fitness 2024</p>
+    </footer>
 </body>
 
 </html>
