updated some text

--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@
         </section>
 
         <section class="program">
-            <h1>PROGRAM BENEFITS</h1>
+            <h1>program benifits</h1>
             <div class="container">
                 <div class="table">
                     <table>
                         <thead>
                             <tr>
                                 <th>description</th>
-                                <th>MEMBER</th>
+                                <th>member</th>
                                 <th>red</th>
                                 <th>silver</th>
                                 <th>black</th>
